fix all sonarqube requiremets and start workin on tests