@@ -1,7 +1,7 @@
 package com.sophinia.backend.service;
 
 
-import com.sophinia.backend.dto.mappingDTO.*;
+import com.sophinia.backend.dto.mappingdto.*;
 import com.sophinia.backend.dto.validation.MeasurementsValuesDTO;
 import com.sophinia.backend.dto.validation.OrderValidationDTO;
 import com.sophinia.backend.exception.NotFoundException;
@@ -28,7 +28,7 @@ public class OrderService {
     private final MeasurementFieldRepository measurementFieldRepository;
     private final MeasurementValueRepository measurementValueRepository;
 
-    private final ClientService clientService;
+
     private final ProductService productService;
     private final ClothingModelService clothingModelService;
     private final FabricService fabricService;
@@ -44,7 +44,7 @@ public class OrderService {
             final MeasurementFieldRepository measurementFieldRepository,
             final MeasurementValueRepository measurementValueRepository,
 
-            final ClientService clientService,
+
             final ProductService productService,
             final ClothingModelService clothingModelService,
             final FabricService fabricService,
@@ -58,7 +58,7 @@ public class OrderService {
         this.availabilityRepository = availabilityRepository;
         this.measurementValueRepository = measurementValueRepository;
 
-        this.clientService = clientService;
+
         this.productService = productService;
         this.clothingModelService = clothingModelService;
         this.fabricService = fabricService;
@@ -69,7 +69,6 @@ public class OrderService {
 
     public ResponseEntity<Order> makeOrder (OrderValidationDTO orderValidationDTO) {
 
-        // make client login first
         // check if client exists by email
         Client client = clientRepository.findClientByEmail(orderValidationDTO.client().email())
                 .orElseGet(() -> {
@@ -87,21 +86,21 @@ public class OrderService {
         order.setOrderDate(LocalDate.now());
 
         Optional<OrderStatus> orderStatus = this.orderStatusRepository.findById(1L);
-        order.setOrderStatuse( orderStatus.get() );
+        orderStatus.ifPresent(order::setOrderStatuse);
 
-        Product product = (Product) productService.getProductById( orderValidationDTO.productId() ).getBody();
+        Product product = productService.getProductById( orderValidationDTO.productId() ).getBody();
         order.setProduct( product );
 
-        Decoration decoration = (Decoration) decorationService.getDecorationById( orderValidationDTO.decorationId() ).getBody();
+        Decoration decoration = decorationService.getDecorationById( orderValidationDTO.decorationId() ).getBody();
         order.setDecoration( decoration );
 
-        Fabric fabric = (Fabric) fabricService.getFabricById( orderValidationDTO.fabricId() ).getBody();
+        Fabric fabric = fabricService.getFabricById( orderValidationDTO.fabricId() ).getBody();
         order.setFabric( fabric );
 
-        ClothingModel clothingModel = (ClothingModel) clothingModelService.getClothingModel( orderValidationDTO.clothingModelId() ).getBody();
+        ClothingModel clothingModel = clothingModelService.getClothingModel( orderValidationDTO.clothingModelId() ).getBody();
         order.setClothingModel( clothingModel );
 
-        Design design = (Design) designService.getDesignById( orderValidationDTO.designId() ).getBody();
+        Design design = designService.getDesignById( orderValidationDTO.designId() ).getBody();
         order.setDesign( design );
 
         order.setClient( client );
@@ -124,9 +123,7 @@ public class OrderService {
         measurementSet.setOrder( savedOrder );
         measurementSetRepository.save( measurementSet );
 
-        return new ResponseEntity(savedOrder, HttpStatus.OK);
-
-//        return null;
+        return new ResponseEntity<>(savedOrder, HttpStatus.OK);
     }
 
     public ResponseEntity<List<Order>> getOrders () {
@@ -150,19 +147,13 @@ public class OrderService {
             throw  new NotFoundException("this order not found");
         }
 
-        Object[] row = rows.get(0);
+        Object[] row = rows.getFirst();
         ProductDTO product = new ProductDTO((String) row[1], (String) row[2], (String) row[3]);
         List<OrderMeasurementFieldDTO> measurementFields = rows.stream()
-                .map(r -> {
-
-                    System.out.println("row 4 " + r[4]);
-                    System.out.println("row 5 " + r[5]);
-
-                    return new OrderMeasurementFieldDTO(
+                .map(r -> new OrderMeasurementFieldDTO(
                             ((Number) r[4]).longValue(),
                             (String) r[5]
-                    );
-                })
+                    ))
                 .distinct()
                 .toList();
 
@@ -188,12 +179,10 @@ public class OrderService {
 
         List<Object[]> measurementRows = orderRepository.getMeaserementValues(orderDetails.getMeasurementSet());
         List<MeasurementValuesDTO> measurements = measurementRows.stream()
-                .map(r -> {
-                    return new MeasurementValuesDTO(
+                .map(r -> new MeasurementValuesDTO(
                             (String) r[0],
                             (Double) r[1]
-                    );
-                })
+                    ))
                 .distinct()
                 .toList();
 
@@ -211,7 +200,7 @@ public class OrderService {
         measurementsValuesDTO.measurementValues()
                 .forEach(measure -> {
                     MeasurementValue measurementValue = new MeasurementValue();
-                    // get measurment set form db
+
                     MeasurementSet measurementSet = measurementSetRepository.findById( measure.measurementSetId() )
                             .orElseThrow(() -> new NotFoundException("this measurement set not found"));
 
